--- a/aac-ionic/www/css/style.css
+++ b/aac-ionic/www/css/style.css
@@ -155,6 +155,7 @@ i.fa {
 	background-color: transparent !important;
 	border: none !important;
 	background: none;
+    visibility: hidden;
 }
 
 .item-eye{
